push change to Scene.fxml

--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -63,11 +63,13 @@
                               <Canvas height="338.0" width="247.0" />
                               <VBox prefHeight="339.0" prefWidth="185.0">
                                  <children>
+                                    <Label text="tileId" />
+                                    <TextField />
+                                    <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="185.0" text="Button" />
+                                    <Label />
                                     <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="186.0" text="Create/Update" />
                                     <Label />
                                     <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="185.0" text="Delete" />
-                                    <Label text="tileId" />
-                                    <TextField />
                                  </children>
                               </VBox>
                            </children>
